Sun Aug 12 12:02:09 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/Makefile.am ($(srcdir)/gtkmarshal.c): Remove extra
	$(srcdir).

Sun Aug 12 10:39:12 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (EXTRA_DIST): Fix problem with trying to
	dist files from intl/, which is no longer there.

2001-08-11  Hans Breuer  <hans@breuer.org>

	* gtk/gtkalignment.c, gtk/gtkarrow.c, gtk/gtkaspectframe.c,
	  gtk/gtkcellrenderer.c, gtk/gtkcellrenderertext.c, 
	  gtk/gtkcombo.c, gtk/gtkcurve.c, gtk/gtkfontsel.c, 
	  gtk/gtklayout.c, gtk/gtkmisc.c, gtk/gtkpacker.c, 
	  gtk/gtkprogress.c, gtk/gtkruler.c,, gtk/gtksettings.c,
	  gtk/gtkspinbutton.c, gtk/gtktexttag.c : coalescing property notifies

	* gtk/gtkclist.c, gtk/gtktipsquery.c, gtk/gtktexttag.c,
	  gtk/gtkwidget.c : added G_SIGNAL_TYPE_STATIC_SCOPE to all
	GDK_TYPE_EVENT signals

	* gtk/gtkalignment.c : removed 'direct allocation bug',
	which Tim discovered while reading the patch

Sat Aug 11 14:32:14 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.h (gtk_widget_set_default_visual): Add some
	compat macros for push/pop/set_visual that were supposed
	to be added a long time ago, but got dropped. 

Fri Aug 10 16:55:53 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkwindow.c (gtk_window_set_policy): coalesce multiple
	property notifies.

2001-08-07  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkfilesel.c (open_ref_dir): fix a typo.

	* gtk/gtkplug.c (gtk_plug_init): remove setting of auto_shrink;
	some fixage is needed here, but nothing simple. Owen understands
	it. ;-)

        * gtk/gtkwindow.h, gtk/gtkwindow.c: Rework code and API for window
	sizing and positioning.  Also, fix bug in compute_geometry_hints
	(width/height confusion for setting min size). 
	(gtk_window_move): new function
	(gtk_window_resize): new function
	(gtk_window_get_size): new function
	(gtk_window_get_position): new function
	(gtk_window_parse_geometry): new function
	
 	* gtk/gtkwidget.c (gtk_widget_set_size_request): new function